--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <h3>プレゼントを贈ろう</h3>
 
 <form action="/" method="POST">
-    <input name="num"></input>
+    <input type="url" name="posturl" value="" placeholder="https://www.amazon.co.jp/あげたいプレゼント" size="40"></input>
 </form>
 
 {% endblock %}
