--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang="ja">
 
 <head>
-<title>プレゼント交換</title>
+    <title>プレゼント交換</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
