--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,15 @@
-@charset 'utf-8';
+@charset "utf-8";
 
 body {
-  margin: 10%;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    margin: 10%;
 }
 
-input {
-  width: 100%;
-  box-sizing: border-box;
-  margin: 1em 0;
-  padding: .8em;
-  border-radius: 2em;
-  border: 1px solid #aaa;
+.input_posturl {
+    width: 100%;
+    box-sizing: border-box;
+    margin: 1em 0;
+    padding: .8em;
+    border-radius: 2em;
+    border: 1px solid #aaa;
 }
