--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,27 @@
 {% block content %}
 <h2>プレゼントを贈ろう</h2>
 
-<form action="/" method="POST">
-    <input type="url" class="input_posturl" name="posturl" value="" placeholder="https://www.amazon.co.jp/あげたいプレゼント" size="40"></input>
-    <input type="submit" name="submit" value="このプレゼントを贈る">
+<form action="/present" method="POST">
+    <div class="form_line">
+        <div class="line_title">
+            ねだん
+        </div>
+        <div class="form">
+            <input type="number" class="price_form" id="present_price" name="present_price" size="4">
+        </div>
+    </div>
+
+    <div class="form_line">
+        <div class="line_title">
+            URL
+        </div>
+        <div class="form">
+            <input type="url" class="price_form" id="present_url" name="present_url" placeholder="https://www.amazon.co.jp/贈りたいプレゼント" size="50">
+        </div>
+    </div>
+
+    <input type="submit" class="submit" name="submit" value="このプレゼントを贈る">
+
 </form>
 
 {% endblock %}
