--- a/templates/present.html
+++ b/templates/present.html
@@ -1,9 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-<h3>プレゼントを贈ろう</h3>
+<h2>プレゼントを贈ろう</h2>
 
-<form action="/" method="POST">
-    <input name="num"></input>
+<form action="/present" method="POST">
+    ねだん <input type="number" class="price_form" id="present_price" name="present_price">
+    URL <input type="number" class="price_form" id="present_url" name="present_url">
+    <input type="submit" name="submit" value="このプレゼントを贈る">
 </form>
 
 {% endblock %}
