--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             URL
         </div>
         <div class="form">
-            <input type="url" class="price_form" id="present_url" name="present_url" placeholder="https://www.amazon.co.jp/贈りたいプレゼント" size="50">
+            <input type="url" class="price_form" id="present_URL" name="present_URL" placeholder="https://www.amazon.co.jp/贈りたいプレゼント" size="50">
         </div>
     </div>
 
