:tada: present.html

--- a/templates/present.html
+++ b/templates/present.html
@@ -3,9 +3,7 @@
 <h2>プレゼントを贈ろう</h2>
 
 <form action="/present" method="POST">
-    ねだん <input type="number" class="price_form" id="present_price" name="present_price">
-    URL <input type="number" class="price_form" id="present_url" name="present_url">
-    <input type="submit" name="submit" value="このプレゼントを贈る">
+    {{present_URL}}をうけとったよ
 </form>
 
 {% endblock %}
