:sparkles: titleを受け取るように変更

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             ねだん
         </div>
         <div class="form">
-            <input type="number" class="price_form" id="present_price" name="present_price" size="4">
+            <input type="number" id="present_price" name="present_price" size="4">
         </div>
     </div>
 
@@ -17,7 +17,7 @@
             URL
         </div>
         <div class="form">
-            <input type="url" class="price_form" id="present_URL" name="present_URL" placeholder="https://www.amazon.co.jp/贈りたいプレゼント" size="50">
+            <input type="url" id="present_URL" name="present_URL" placeholder="https://www.amazon.co.jp/贈りたいプレゼント" size="50">
         </div>
     </div>
 
