--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             ねだん
         </div>
         <div class="form">
-            <input type="number" id="present_price" name="present_price" size="4">
+            <input type="number" id="present_price" name="present_price" size="6">
         </div>
     </div>
 
@@ -17,11 +17,13 @@
             URL
         </div>
         <div class="form">
-            <input type="url" id="present_URL" name="present_URL" placeholder="https://www.amazon.co.jp/贈りたいプレゼント" size="50">
+            <input type="url" id="present_URL" name="present_URL" placeholder="https://www.amazon.co.jp/贈りたいプレゼント" size="40">
         </div>
     </div>
 
-    <input type="submit" class="submit" name="submit" value="このプレゼントを贈る">
+    <div class="submit">
+        <input type="submit" class="btn-square-shadow" name="submit" value="このプレゼントを贈る">
+    </div>
 
 </form>
 
