--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-{% block content %}
-<!-- ここにメインコンテンツを書く -->
-{% endblock %}
+    <div class="content">
+        {% block content %}
+        <!-- ここにメインコンテンツを書く -->
+        {% endblock %}
+    </div>
 </body>
 
 </html>
